# heimq

./: .dockerignore  .gitignore  .helix.yml  AGENTS.md  Cargo.toml  Dockerfile  README.md  deny.toml  justfile  lefthook.yml  release.toml
crates/heimq/: Cargo.toml  README.md
crates/heimq-broker/: Cargo.toml
crates/heimq-broker/src/: context.rs  error.rs  lib.rs  produce.rs
crates/heimq-broker/src/consumer_group/: backend.rs  mod.rs
crates/heimq-broker/src/storage/: cluster_view.rs  mod.rs  offset_store.rs  record_batch_view.rs
crates/heimq-handlers/: Cargo.toml
crates/heimq-handlers/src/: api_versions.rs  codec.rs  error.rs  flexible.rs  init_producer_id.rs  lib.rs  produce.rs  producer_state.rs
crates/heimq-handlers/tests/: embedder_api.rs  sequence_policy.rs
crates/heimq-protocol/: Cargo.toml
crates/heimq-protocol/src/: error.rs
crates/heimq-protocol/src/protocol/: types.rs
crates/heimq-testkit/: Cargo.toml
crates/heimq-testkit/src/: lib.rs
crates/heimq-testkit/src/fixtures/: mod.rs  object_store_shape.rs  queue_sink_shape.rs  wal_shape.rs
crates/heimq-testkit/src/suites/: cluster_view.rs  group_coordinator.rs  log_backend.rs  mod.rs  offset_store.rs  partition_log.rs
crates/heimq-testkit/tests/: fixture_backend_conformance.rs  memory_backend_conformance.rs  postgres_offset_store_conformance.rs
crates/heimq-wire/: Cargo.toml
crates/heimq-wire/src/: lib.rs
crates/heimq/benches/: BASELINE.md
crates/heimq/docs/helix/: parking-lot.md
crates/heimq/docs/helix/00-discover/: product-vision.md
crates/heimq/docs/helix/01-frame/: concerns.md  prd.md
crates/heimq/docs/helix/02-design/: DESIGN.md  README.md
crates/heimq/docs/helix/03-test/: helm-memory-e2e-plan.md  helm-memory-e2e-review-brief.md  helm-memory-e2e-review-round-1.md  helm-memory-e2e-review-round-2.md  helm-memory-e2e-review-round-3.md  helm-memory-e2e-review-round-4.md  helm-memory-e2e-review-round-5.md  helm-memory-e2e-review-round-6.md
crates/heimq/docs/helix/04-build/: implementation-plan.md
crates/heimq/scripts/: compatibility-test.sh  kcat-stress.sh  stress-matrix.sh
crates/heimq/scripts/bench/: kafka-perf-test.sh
crates/heimq/scripts/bench/profiles/: producer-legacy.conf
crates/heimq/src/: config.rs  config_store.rs  error.rs  lib.rs  main.rs  producer_state.rs  server.rs  test_support.rs  transaction_state.rs
crates/heimq/src/consumer_group/: backend.rs  coordinator.rs  group.rs  mod.rs  offset_store.rs
crates/heimq/src/handler/: add_offsets_to_txn.rs  add_partitions_to_txn.rs  alter_configs.rs  api_versions.rs  create_partitions.rs  create_topics.rs  delete_groups.rs  delete_records.rs  delete_topics.rs  describe_cluster.rs  describe_configs.rs  describe_groups.rs  describe_log_dirs.rs  describe_topic_partitions.rs  elect_leaders.rs  end_txn.rs  fetch.rs  find_coordinator.rs  heartbeat.rs  incremental_alter_configs.rs  init_producer_id.rs  join_group.rs  leave_group.rs  list_groups.rs  list_offsets.rs  list_transactions.rs  metadata.rs  mod.rs  offset_commit.rs  offset_delete.rs  offset_fetch.rs  offset_for_leader_epoch.rs  produce.rs  sync_group.rs  tests.rs  txn_offset_commit.rs  write_txn_markers.rs
crates/heimq/src/protocol/: codec.rs  flexible.rs  mod.rs  router.rs
crates/heimq/src/storage/: cluster_view.rs  dispatch.rs  memory.rs  mod.rs  offset_store.rs  partition.rs  postgres_offsets.rs  record_batch_view.rs  segment.rs  topic.rs
crates/heimq/tests/: API_COVERAGE.md  api_coverage.rs  bench_baseline.rs  compat.rs  contract.rs  helm_memory_e2e.rs  integration.rs  postgres_offsets.rs
crates/heimq/tests/compat/franz_go/: go.mod  go.sum  main.go
crates/heimq/tests/compat/java_oracle/: pom.xml
crates/heimq/tests/compat/kafkajs_oracle/: main.js
crates/heimq/tests/compat/sarama_oracle/: go.mod  main.go
crates/heimq/tests/parity/: README.md  bench.rs  broker.rs  diff.rs  driver.rs  exemptions.rs  exemptions.toml  main.rs  raw_protocol.rs
crates/heimq/tests/parity/workloads/: consumer_group.rs  duplicate_sequence.rs  epoch_fence.rs  idempotent_produce.rs  mod.rs  out_of_order_sequence.rs  produce_fetch.rs  transactional_produce.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  route.rs
fuzz/known_crashers/: oom-create-topics  oom-describe-groups-array-count
heimq/: Cargo.toml
heimq/docs/adr/: 001-kafka-client-for-testing.md  002-bead-close-test-gate.md  003-flexible-version-codec-strategy.md
heimq/docs/helix/: parking-lot.md
heimq/docs/helix/00-discover/: product-vision.md
heimq/docs/helix/01-frame/: concerns.md  prd.md
heimq/docs/helix/01-frame/features/: FEAT-001-wire-protocol-compatibility.md  FEAT-002-core-kafka-semantics.md  FEAT-003-differential-parity-testing.md  FEAT-004-benchmark-conformance.md  FEAT-005-ecosystem-integrations.md  FEAT-006-flexible-version-protocol.md
heimq/docs/helix/01-frame/user-stories/: US-001-standard-client-connects.md  US-002-consumer-group-rebalance.md  US-003-idempotent-producer.md  (+10 more)
heimq/docs/helix/02-design/: HARNESS-001-parity.md  README.md
heimq/docs/helix/03-test/: README.md  test-plan.md
heimq/docs/helix/04-build/: implementation-plan.md
heimq/scripts/: kcat-smoke.sh  kcat-stress.sh
heimq/scripts/bench/: README.md  kafka-perf-test.sh
heimq/scripts/bench/profiles/: consumer-legacy.conf
heimq/src/: config.rs  error.rs  lib.rs  main.rs  server.rs  test_support.rs
heimq/src/consumer_group/: backend.rs  coordinator.rs  group.rs  mod.rs  offset_store.rs
heimq/src/handler/: create_topics.rs  delete_topics.rs  fetch.rs  find_coordinator.rs  join_group.rs  leave_group.rs  list_offsets.rs  metadata.rs  offset_commit.rs  offset_fetch.rs  produce.rs  sync_group.rs  tests.rs
heimq/src/protocol/: codec.rs  flexible.rs  mod.rs  router.rs
heimq/src/storage/: capabilities.rs  dispatch.rs  memory.rs  mod.rs  offset_store.rs  partition.rs  postgres_offsets.rs  segment.rs  topic.rs
heimq/tests/: contract.rs  integration.rs  postgres_offsets.rs
heimq/tests/parity/: README.md  broker.rs  diff.rs  exemptions.rs  main.rs  normalize.rs
heimq/tests/parity/workloads/: mod.rs
(+751 files in other folders)
