[workspace]
resolver = "2"
members = [
    "crates/heimq",
    "crates/heimq-wire",
    "crates/heimq-broker",
    "crates/heimq-testkit",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
authors = ["heimq contributors"]
license = "MIT"
repository = "https://github.com/heimq/heimq"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1
