[workspace]
resolver = "2"
members = [
    "crates/heimq",
    "crates/heimq-wire",
    "crates/heimq-broker",
    "crates/heimq-testkit",
]

# Vendored third-party crate (patched kafka-protocol 0.15.1). Excluded from the
# workspace so it builds as a dependency under `--cap-lints allow` — as upstream
# ships it — instead of being held to heimq's `-D warnings` / clippy policy or
# having its own tests run by `--workspace`. Still resolved via path dependency.
exclude = ["crates/heimq-protocol"]

[workspace.package]
edition = "2021"
rust-version = "1.88"
authors = ["heimq contributors"]
license = "MIT"
repository = "https://github.com/easel/heimq"

# The patched kafka-protocol lives in `crates/heimq-protocol` (a vendored fork,
# lib name `heimq_protocol`) rather than behind a `[patch.crates-io]`, because a
# patch is not transitive — every downstream workspace would have to replicate
# it. As a normal renamed dependency the OOM-decode fix travels with heimq. See
# that crate's Cargo.toml for provenance. Tracked: heimq-bb299c68.

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1
