[package]
name = "heimq-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
heimq = { path = "../crates/heimq", features = ["test-support"] }
heimq-broker = { path = "../crates/heimq-broker" }

[[bin]]
name = "route"
path = "fuzz_targets/route.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
bench = false

# Keep the fuzz crate out of the parent workspace (cargo-fuzz convention).
[workspace]

# No kafka-protocol patch needed: heimq and heimq-broker pull in the vendored
# `heimq-protocol` crate (crates/heimq-protocol) by path, so the fuzzer already
# exercises the patched, bounded-decode implementation.
