[package]
name = "heimq-broker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kafka broker handlers, trait families, and in-memory reference backends for heimq"

[dependencies]
bytes = "1.10"
thiserror = "2.0"
kafka-protocol = "0.15"
parking_lot = "0.12"
