# Vendored copy of `kafka-protocol` 0.15.1 (github.com/tychedelia/kafka-protocol-rs)
# with one patch: Array/CompactArray decode bounds its Vec pre-allocation by the
# remaining buffer, fixing a remotely-triggerable OOM DoS (a small request with a
# huge declared array count reserved gigabytes before reading any element).
# See src/protocol/types.rs and docs/upstream/kafka-protocol/.
#
# Vendored rather than consumed via `[patch.crates-io]` because a patch is not
# transitive: every downstream workspace would otherwise have to replicate it.
# As a normal renamed crate the fix travels with heimq automatically. Consumers
# that need Kafka protocol types depend on `heimq-protocol` directly.
#
# Remove this crate and switch back to upstream once the bound lands in a
# published kafka-protocol release (tracked: heimq-bb299c68).
[package]
name = "heimq-protocol"
version = "0.15.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Kafka wire protocol implementation (vendored fork of kafka-protocol 0.15.1 with bounded array-decode allocation)"
repository = "https://github.com/easel/heimq"
readme = false

[lib]
name = "kafka_protocol"
# Doc examples reference the upstream crate name; not worth maintaining for a vendored dep.
doctest = false

[features]
messages_enums = []
client = []
broker = []
gzip = ["dep:flate2"]
zstd = ["dep:zstd"]
snappy = ["dep:snap"]
lz4 = ["dep:lz4"]
default = ["client", "broker", "gzip", "zstd", "snappy", "lz4"]

[dependencies]
bytes = "1.10.1"
uuid = "1.3.0"
indexmap = "2.0.0"
crc = "3.0.0"
snap = { version = "1.0.5", optional = true }
flate2 = { version = "1.0.20", optional = true }
zstd = { version = "0.13", optional = true }
lz4 = { version = "1.24", optional = true }
paste = "1.0.7"
crc32c = "0.6.4"
anyhow = "1.0.80"
