[package]
name = "heimq-testkit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-trait conformance suites and differential parity harness for heimq"

[dependencies]
heimq = { path = "../heimq", features = ["test-support"] }
anyhow = "1.0"
kafka-protocol = "0.15"

[dev-dependencies]
tokio = { version = "1.44", features = ["full"] }
testcontainers = "0.23"

[features]
backend-postgres = ["heimq/backend-postgres"]
