[package]
name = "heimq-testkit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-trait conformance suites and differential parity harness for heimq"

[dependencies]
heimq = { path = "../heimq", version = "0.1.0", features = ["test-support"] }
anyhow = "1.0"
# Vendored crate; lib name `kafka_protocol`, so `use kafka_protocol::` is unchanged.
heimq-protocol = { path = "../heimq-protocol", version = "0.15.1" }

[dev-dependencies]
tokio = { version = "1.44", features = ["full"] }
testcontainers = "0.27"

[features]
backend-postgres = ["heimq/backend-postgres"]
