[package]
name = "heimq-wire"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kafka wire framing, codec, and connection loop for heimq"

[dependencies]
async-trait = "0.1"
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "sync", "macros"] }
tracing = "0.1"
