[package]
name = "heimq"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["heimq contributors"]
description = "A fast, lightweight, single-node Kafka-compatible API server"
license = "MIT"
repository = "https://github.com/heimq/heimq"
keywords = ["kafka", "messaging", "streaming", "queue"]
categories = ["network-programming", "asynchronous"]

[dependencies]
heimq-broker = { path = "../heimq-broker", version = "0.1.0" }
heimq-wire = { path = "../heimq-wire", version = "0.1.0" }

# Async runtime
tokio = { version = "1.44", features = ["full"] }
async-trait = "0.1"

# Kafka protocol - code-generated wire protocol support.
# Vendored fork of kafka-protocol 0.15.1; imported as `heimq_protocol`.
heimq-protocol = { path = "../heimq-protocol", version = "0.15.1" }

# Serialization
bytes = "1.10"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Data structures
dashmap = "6.1"
parking_lot = "0.12"
crossbeam = "0.8"

# Time
chrono = "0.4"

# CRC for record batches
crc32c = "0.6"

# Compression support
flate2 = "1.0"          # gzip
snap = "1.1"            # snappy
lz4 = "1.28"            # lz4
zstd = "0.13"           # zstd

# Optional persistence
memmap2 = "0.9"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Optional Postgres durable backend (feature: backend-postgres)
postgres = { version = "0.19", optional = true }

[dev-dependencies]
# Test utilities
tokio-test = "0.4"
tempfile = "3.16"
proptest = "1.6"

# Primary test client - rdkafka with librdkafka built from source
# FIREWALLED: dev-dependency only, never in server binary
rdkafka = { version = "0.39", features = ["cmake-build", "tokio"] }

# Parity harness - container orchestration and serialization
testcontainers = "0.27"
toml = "1"

[features]
default = []
test-support = ["dep:serde", "dep:serde_json"]
backend-postgres = ["dep:postgres"]

[dev-dependencies.heimq]
path = "."
features = ["test-support"]

[[bin]]
name = "heimq"
path = "src/main.rs"

[[test]]
name = "parity"
path = "tests/parity/main.rs"
harness = false


# Benchmarks - uncomment when rdkafka is available
# [[bench]]
# name = "throughput"
# harness = false

# [[bench]]
# name = "latency"
# harness = false
